<resources>
    <string name="app_name">DAQ</string>
    <string name="action_settings">Settings</string>
    <string name="engine_temperature">Eng Temp</string>
    <string name="running_time">Total Time</string>
    <string name="current_lap">Current Lap</string>
    <string name="air_fuel_ratio">Air/Fuel Ratio</string>
    <string name="rpm">RPM</string>
    <string name="mph">MPH</string>
    <string name="zero_float">0.0</string>
    <string name="zero_temp">0.0 °F</string>
    <string name="zero_time">00:00</string>
    <string name="zero_percent">0.0%</string>
    <string name="settings">settings</string>
    <string name="watts">W</string>
    <string name="zero_int">0</string>
    <string name="joules">J</string>
</resources>
