<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HeadsUpDisplay"
    tools:showIn="@layout/activity_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speedLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top|right"
                    android:paddingRight="5dp"
                    android:text="@string/zero_float"
                    android:textColor="#232323"
                    android:textSize="90sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|bottom"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    android:text="@string/mph"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="35sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rpmLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_weight="1"
                    android:gravity="top|right"
                    android:paddingRight="5dp"
                    android:text="@string/zero_float"
                    android:textColor="#232323"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|left"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:paddingTop="18dp"
                    android:text="@string/rpm"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lapTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom|right"
                        android:text="@string/zero_time"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textIsSelectable="false"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/totalTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top|right"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/zero_time"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="35sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="2"
                        android:gravity="left|bottom"
                        android:paddingBottom="6dp"
                        android:text="@string/current_lap"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="top|left"
                        android:paddingTop="12dp"
                        android:text="@string/running_time"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2.0"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/engine_temperature"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/engineTempLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/zero_temp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#232323" />
                </LinearLayout>

                <edu.msoe.smv.view.GoldilocksBar
                    android:id="@+id/engineTempBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:progress="60"
                    android:progressDrawable="@android:color/transparent"
                    android:thumb="@drawable/seek_thumb_normal"
                    android:thumbOffset="12dp" />

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                <!--android:id="@+id/textView33"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/air_fuel_ratio"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

                <!--<TextView-->
                <!--android:id="@+id/oxygenPercLabel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="right"-->
                <!--android:text="@string/zero_percent"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                <!--android:textColor="#232323" />-->
                <!--</LinearLayout>-->

                <!--<edu.msoe.smv.view.GoldilocksBar-->
                <!--android:id="@+id/temp2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_marginTop="4dp"-->
                <!--android:indeterminate="false"-->
                <!--android:max="100"-->
                <!--android:paddingLeft="12dp"-->
                <!--android:paddingRight="12dp"-->
                <!--android:progress="20"-->
                <!--android:progressDrawable="@android:color/transparent"-->
                <!--android:thumb="@drawable/seek_thumb_normal"-->
                <!--android:thumbOffset="12dp" />-->
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
